# serp-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
serp_mcp/: config.py  mcp_server.py  parser.py  scraper.py  types.py
