[project]
name = "serp-mcp"
version = "1.0.0"
description = "Google SERP MCP server with fingerprint rotation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camoufox[geoip]",
    "pydantic",
    "protobuf",
    "fastmcp",
]

[project.scripts]
serp-mcp = "serp_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.76.0",
    "pytest>=9.0.2",
]
